--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Mandala maker</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -23,7 +24,7 @@
 
         <div class="control">
             Line width<br>
-            <input class="input" type="number" name="width" min="1" max="10" step="1" value="2">
+            <input class="input" type="number" name="wid4th" min="1" max="10" step="1" value="2">
         </div>
 
         <div class="control">
@@ -55,7 +56,7 @@
     </div>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="script.js"></script>
 
 </body>
 </html>
